--- a/Calculadora/app/src/main/res/layout/calculadora_layout.xml
+++ b/Calculadora/app/src/main/res/layout/calculadora_layout.xml
@@ -7,7 +7,8 @@
     <TableRow>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="80px"
+            android:layout_height="wrap_content"
+            android:textSize="28dp"
             android:layout_span="4"
             android:text="0"
             android:textAlignment="textEnd"
